compleating login page

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,31 @@
       <!-- /.header__styled -->
     </header>
     <!-- /.header -->
-    <main class="main"></main>
+    <main class="main">
+      <div class="main__login-form-wrapper">
+        <form action="">
+          <div class="main__login-form-inputs-wrapper">
+            <input type="text" placeholder="Login" class="main__login-input" />
+            <!-- /.main__login-input -->
+            <input
+              type="password"
+              placeholder="Password"
+              class="main__password-input"
+            />
+            <!-- /.main__password-input -->
+            <div class="main__login-form-button-wrapper">
+              <button class="main__login-form-button">
+                <span class="main__login-form-button-text">Login</span>
+              </button>
+              <!-- /.main__login-form-button -->
+            </div>
+            <!-- /.main__login-form-button-wrapper -->
+          </div>
+          <!-- /.main__login-form-inputs-wrapper -->
+        </form>
+      </div>
+      <!-- /.main__login-form-wrapper -->
+    </main>
     <!-- /.main -->
     <footer class="footer">
       <div class="footer__styled">
