finishing chat page

--- a/src/chat.html
+++ b/src/chat.html
@@ -102,7 +102,38 @@
           <!-- /.main__request-card-message-wrapper -->
         </div>
         <!-- /.main__request-card -->
-        <div class="main__response-card"></div>
+        <div class="main__response-card">
+          <div class="main__response-card-header">
+            <div class="main__response-card-avatar-wrapper">
+              <img
+                src="./assets/img/svg/avatar.svg"
+                alt=""
+                class="main__response-card-avatar"
+              />
+              <!-- /.main__response-card-avatar -->
+            </div>
+            <!-- /.main__response-card-avatar-wrapper -->
+            <div class="main__response-card-username-wrapper">
+              <span class="main__response-card-username">Jane Doe</span>
+              <!-- /.main__response-card-username -->
+            </div>
+            <!-- /.main__response-card-username-wrapper -->
+          </div>
+          <!-- /.main__response-card-header -->
+          <div class="main__response-card-message-wrapper">
+            <p class="main__response-card-message">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <!-- /.main__response-card-message -->
+          </div>
+          <!-- /.main__response-card-message-wrapper -->
+        </div>
         <!-- /.main__response-card -->
       </div>
       <!-- /.main__chat-cards-wrapper -->
