adding message input to chat page

--- a/src/chat.html
+++ b/src/chat.html
@@ -135,8 +135,159 @@
           <!-- /.main__response-card-message-wrapper -->
         </div>
         <!-- /.main__response-card -->
+        <div class="main__request-card">
+          <div class="main__request-card-header">
+            <div class="main__request-card-avatar-wrapper">
+              <img
+                      src="./assets/img/svg/avatar.svg"
+                      alt=""
+                      class="main__request-card-avatar"
+              />
+              <!-- /.main__request-card-avatar -->
+            </div>
+            <!-- /.main__request-card-avatar-wrapper -->
+            <div class="main__request-card-username-wrapper">
+              <span class="main__request-card-username">
+                John Doe
+              </span>
+              <!-- /.main__request-card-username -->
+            </div>
+            <!-- /.main__request-card-username-wrapper -->
+          </div>
+          <!-- /.main__request-card-header -->
+          <div class="main__request-card-message-wrapper">
+            <p class="main__request-card-message">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <!-- /.main__request-card-message -->
+          </div>
+          <!-- /.main__request-card-message-wrapper -->
+        </div>
+        <!-- /.main__request-card -->
+        <div class="main__response-card">
+          <div class="main__response-card-header">
+            <div class="main__response-card-avatar-wrapper">
+              <img
+                      src="./assets/img/svg/avatar.svg"
+                      alt=""
+                      class="main__response-card-avatar"
+              />
+              <!-- /.main__response-card-avatar -->
+            </div>
+            <!-- /.main__response-card-avatar-wrapper -->
+            <div class="main__response-card-username-wrapper">
+              <span class="main__response-card-username">Jane Doe</span>
+              <!-- /.main__response-card-username -->
+            </div>
+            <!-- /.main__response-card-username-wrapper -->
+          </div>
+          <!-- /.main__response-card-header -->
+          <div class="main__response-card-message-wrapper">
+            <p class="main__response-card-message">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <!-- /.main__response-card-message -->
+          </div>
+          <!-- /.main__response-card-message-wrapper -->
+        </div>
+        <!-- /.main__response-card -->
+        <div class="main__request-card">
+          <div class="main__request-card-header">
+            <div class="main__request-card-avatar-wrapper">
+              <img
+                      src="./assets/img/svg/avatar.svg"
+                      alt=""
+                      class="main__request-card-avatar"
+              />
+              <!-- /.main__request-card-avatar -->
+            </div>
+            <!-- /.main__request-card-avatar-wrapper -->
+            <div class="main__request-card-username-wrapper">
+              <span class="main__request-card-username">
+                John Doe
+              </span>
+              <!-- /.main__request-card-username -->
+            </div>
+            <!-- /.main__request-card-username-wrapper -->
+          </div>
+          <!-- /.main__request-card-header -->
+          <div class="main__request-card-message-wrapper">
+            <p class="main__request-card-message">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <!-- /.main__request-card-message -->
+          </div>
+          <!-- /.main__request-card-message-wrapper -->
+        </div>
+        <!-- /.main__request-card -->
+        <div class="main__response-card">
+          <div class="main__response-card-header">
+            <div class="main__response-card-avatar-wrapper">
+              <img
+                      src="./assets/img/svg/avatar.svg"
+                      alt=""
+                      class="main__response-card-avatar"
+              />
+              <!-- /.main__response-card-avatar -->
+            </div>
+            <!-- /.main__response-card-avatar-wrapper -->
+            <div class="main__response-card-username-wrapper">
+              <span class="main__response-card-username">Jane Doe</span>
+              <!-- /.main__response-card-username -->
+            </div>
+            <!-- /.main__response-card-username-wrapper -->
+          </div>
+          <!-- /.main__response-card-header -->
+          <div class="main__response-card-message-wrapper">
+            <p class="main__response-card-message">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <!-- /.main__response-card-message -->
+          </div>
+          <!-- /.main__response-card-message-wrapper -->
+        </div>
+        <!-- /.main__response-card -->
       </div>
       <!-- /.main__chat-cards-wrapper -->
+      <div class="main__input-chat-message-wrapper">
+        <input type="text" class="main__chat-message-input" placeholder="Type message..." />
+        <!-- /.main__input-chat-message -->
+        <div class="main__send-chat-message-button-wrapper">
+          <button class="main__send-chat-message-button">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.5857 9.30078L1.01474 0.069361C0.719033 -0.0752646 0.366184 0.0108954 0.160475 0.284761C-0.046663 0.558626 -0.0538057 0.947885 0.143332 1.22944L6.25033 9.99929L0.143332 18.7691C-0.0538057 19.0507 -0.046663 19.4415 0.159046 19.7138C0.297614 19.9 0.504752 20 0.714747 20C0.816173 20 0.9176 19.9769 1.01331 19.9292L19.5843 10.6978C19.8386 10.5716 20 10.2993 20 9.99929C20 9.69927 19.8386 9.42695 19.5857 9.30078Z"
+                    fill="black"/>
+            </svg>
+          </button>
+          <!-- /.main__send-chat-message-button -->
+        </div>
+        <!-- /.main__send-chat-message-button-wrapper -->
+      </div>
+      <!-- /.main__input-chat-message-wrapper -->
     </main>
     <!-- /.main -->
     <footer class="footer">
